# alexo-io

./: .gitignore  README.md  alexo.service  deploy.sh  prerender.sh
.github/workflows/: mirror.yml
frontend/: Cargo.toml  index.html
frontend/assets/styling/: index.css  theme-dark.css  theme-light.css
frontend/src/: main.rs  theme_store.rs
frontend/src/components/: about_section.rs  certifications_section.rs  contact_section.rs  data.rs  education_section.rs  entry_card.rs  experience_section.rs  footer_section.rs  header_section.rs  hero_section.rs  languages_section.rs  mod.rs  nav_section.rs  projects_section.rs  scroll_to_top.rs  skills_section.rs
